<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whi_swerve_steering_controller</name>
  <version>0.1.1</version>
  <description>The swerve steering controller plugin</description>
  <maintainer email="xinjue.zou.whi@gmail.com">Xinjue</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>whi_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
